--- a/appsscript.json
+++ b/appsscript.json
@@ -1,5 +1,5 @@
 {
-  "timeZone": "America/Denver",
+  "timeZone": "America/Chicago",
   "dependencies": {
     "enabledAdvancedServices": [{
       "userSymbol": "Calendar",
