--- a/appsscript.json
+++ b/appsscript.json
@@ -16,7 +16,7 @@
     "https://www.googleapis.com/auth/gmail.addons.current.message.readonly"
   ],
   "gmail": {
-    "name": "Play with EnviroGuard",
+    "name": "Gmail Filter++",
     "logoUrl": "https://www.gstatic.com/images/icons/material/system/1x/label_googblue_24dp.png",
     "contextualTriggers": [{
       "unconditional": {
